fixed calendar gmail issue and updated all the email templates using it accordingly

--- a/emails/elnaz/auto-responder/in-person-event-agenda.htm
+++ b/emails/elnaz/auto-responder/in-person-event-agenda.htm
@@ -53,16 +53,16 @@
   <tr>
     <td class="center" align="center" valign="top">
       <center>
+
         <table class="container">
           <tr>
             <td>
+              <!--[if gte mso 9]>
               <table class="row pt-30 pb-30 row-blue hide-for-small">
-                <!--[if gte mso 9]>
                 <tr>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                 </tr>
-                <![endif]-->
                 <tr>
                   <td class="wrapper">
                     <table class="six columns">
@@ -88,9 +88,9 @@
                           <p class="mb-0">Location: Houston, TX</p>
 
                           <p class="mb-0">Event: In Person</p>
-                          <!--[if gte mso 9]>
+
                           <img src="http://software.dell.com/images/email/blank.gif" height="10">
-                          <![endif]-->
+
                           <div class="hide-for-small">
                             <table class="button button-green button-width-auto mt-10 mb-0">
                               <tr>
@@ -106,68 +106,184 @@
                     </table>
                   </td>
                 </tr>
-                <!--[if gte mso 9]>
                 <tr>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                 </tr>
-                <![endif]-->
+              </table>
+              <![endif]-->
+              <!-- Hides for Microsoft Outlook-->
+              <!--[if !mso]><!-->
+              <table class="row pt-20 row-blue">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="center">
+                          <center>
+                            <table>
+                              <tr>
+                                <td class="text-pad">
+                                  <img class="mr-20"
+                                       src="http://stage.software.dell.com/images/email/icon-calendar.png">
+
+                                  <div class="text-white pull-right">
+                                    <h1 class="text-white">Save the date</h1>
+
+                                    <p class="mb-0">Date: Sept 29, 2015</p>
+
+                                    <p class="mb-0">Time: 3&#58;46 PM EDT</p>
+
+                                    <p class="mb-0">Location: Houston, TX</p>
+
+                                    <p class="mb-0">Event: In Person</p>
+
+                                    <div class="hide-for-small">
+                                      <table class="button button-green button-width-auto mt-10 mb-0">
+                                        <tr>
+                                          <td>
+                                            <a href="#">Add to Your Calendar</a>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </div>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="text-pad">
+
+                                  <div class="show-for-small">
+                                    <table class="button button-green mt-10 mb-0" style="min-width:274px">
+                                      <tr class="row-blue">
+                                        <td>
+                                          <a href="#">Add to Your Calendar</a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </div>
+                                </td>
+                              </tr>
+                            </table>
+                          </center>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <!--<![endif]-->
+              <!--Agenda-->
+              <table class="row text-size-13 mt-20 hide-for-small">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="text-pad">
+                          <strong>Event Agenda</strong>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Registration
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting
+                          industry.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Tea Break
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                          been the industry's standard dummy text ever since the 1500s.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                          been the industry's standard dummy text ever since the 1500s.
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          1:30PM - 2:30PM
+                        </td>
+                        <td class="nine sub-columns last">
+                          Lorem Ipsum is simply dummy text of the printing
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+
+                  </td>
+                </tr>
               </table>
               <!-- Hides for Microsoft Outlook-->
               <!--[if !mso]><!-->
               <!-- Only visible for mobile -->
               <div class="show-for-small">
-                <!--calendar-->
-                <table class="row pt-10 pb-10 row-blue">
-                  <tr>
-                    <td class="wrapper last">
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="center">
-                            <center>
-                              <table>
-                                <tr>
-                                  <td class="text-pad">
-                                    <img class="mr-20"
-                                         src="http://stage.software.dell.com/images/email/icon-calendar.png">
-
-                                    <div class="text-white pull-right">
-                                      <h1 class="text-white">Save the date</h1>
-
-                                      <p class="mb-0">Date: Sept 29, 2015</p>
-
-                                      <p class="mb-0">Time: 3&#58;46 PM EDT</p>
-
-                                      <p class="mb-0">Location: Houston, TX</p>
-
-                                      <p class="mb-0">Event: In Person</p>
-                                    </div>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="text-pad">
-                                    <table class="medium button button-green button-width-auto mb-0">
-                                      <tbody>
-                                      <tr>
-                                        <td style="width:auto !important;">
-                                          <center>
-                                            <a href="#">Add to Your Calendar</a>
-                                          </center>
-                                        </td>
-                                      </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                            </center>
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
                 <!--Agenda-->
                 <table class="row pt-10 pb-10">
                   <tr>
@@ -296,112 +412,6 @@
                 </table>
               </div>
               <!--<![endif]-->
-              <!--Agenda-->
-              <table class="row text-size-13 mt-20 hide-for-small">
-                <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
-                      <tr>
-                        <td class="text-pad">
-                          <strong>Event Agenda</strong>
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Registration
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting
-                          industry.
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Tea Break
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                          been the industry's standard dummy text ever since the 1500s.
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                          been the industry's standard dummy text ever since the 1500s.
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          1:30PM - 2:30PM
-                        </td>
-                        <td class="nine sub-columns last">
-                          Lorem Ipsum is simply dummy text of the printing
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                    </table>
-
-                  </td>
-                </tr>
-              </table>
               <!--description-->
               <table class="row">
                 <tr>
