--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -53,13 +53,12 @@
         <table class="container">
           <tr>
             <td>
+              <!--[if gte mso 9]>
               <table class="row pt-30 pb-30 row-blue hide-for-small">
-                <!--[if gte mso 9]>
                 <tr>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                 </tr>
-                <![endif]-->
                 <tr>
                   <td class="wrapper">
                     <table class="six columns">
@@ -85,9 +84,9 @@
                           <p class="mb-0">Location: Houston, TX</p>
 
                           <p class="mb-0">Event: In Person</p>
-                          <!--[if gte mso 9]>
-                            <img src="http://software.dell.com/images/email/blank.gif" height="10">
-                          <![endif]-->
+
+                          <img src="http://software.dell.com/images/email/blank.gif" height="10">
+
                           <div class="hide-for-small">
                             <table class="button button-green button-width-auto mt-10 mb-0">
                               <tr>
@@ -103,68 +102,73 @@
                     </table>
                   </td>
                 </tr>
-                <!--[if gte mso 9]>
                 <tr>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                 </tr>
-                <![endif]-->
               </table>
+              <![endif]-->
               <!-- Hides for Microsoft Outlook-->
               <!--[if !mso]><!-->
-              <!-- Only visible for mobile -->
-              <div class="show-for-small">
-                <table class="row pt-10 pb-10 row-blue">
-                  <tr>
-                    <td class="wrapper last">
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="center">
-                            <center>
-                              <table>
-                                <tr>
-                                  <td class="text-pad">
-                                    <img class="mr-20"
-                                         src="http://stage.software.dell.com/images/email/icon-calendar.png">
+              <table class="row pt-20 row-blue">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="center">
+                          <center>
+                            <table>
+                              <tr>
+                                <td class="text-pad">
+                                  <img class="mr-20"
+                                       src="http://stage.software.dell.com/images/email/icon-calendar.png">
 
-                                    <div class="text-white pull-right">
-                                      <h1 class="text-white">Save the date</h1>
+                                  <div class="text-white pull-right">
+                                    <h1 class="text-white">Save the date</h1>
 
-                                      <p class="mb-0">Date: Sept 29, 2015</p>
+                                    <p class="mb-0">Date: Sept 29, 2015</p>
 
-                                      <p class="mb-0">Time: 3&#58;46 PM EDT</p>
+                                    <p class="mb-0">Time: 3&#58;46 PM EDT</p>
 
-                                      <p class="mb-0">Location: Houston, TX</p>
+                                    <p class="mb-0">Location: Houston, TX</p>
 
-                                      <p class="mb-0">Event: In Person</p>
-                                    </div>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="text-pad">
-                                    <table class="medium button button-green button-width-auto mb-0">
-                                      <tbody>
-                                      <tr>
-                                        <td style="width:auto !important;">
-                                          <center>
+                                    <p class="mb-0">Event: In Person</p>
+
+                                    <div class="hide-for-small">
+                                      <table class="button button-green button-width-auto mt-10 mb-0">
+                                        <tr>
+                                          <td>
                                             <a href="#">Add to Your Calendar</a>
-                                          </center>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </div>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="text-pad">
+
+                                  <div class="show-for-small">
+                                    <table class="button button-green mt-10 mb-0" style="min-width:274px">
+                                      <tr class="row-blue">
+                                        <td>
+                                          <a href="#">Add to Your Calendar</a>
                                         </td>
                                       </tr>
-                                      </tbody>
                                     </table>
-                                  </td>
-                                </tr>
-                              </table>
-                            </center>
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </div>
+                                  </div>
+                                </td>
+                              </tr>
+                            </table>
+                          </center>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
               <!--<![endif]-->
               <table class="row text-size-13 mt-20">
                 <tr>
@@ -359,7 +363,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png"
+                                             alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -412,7 +417,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg"
+                                             alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
