--- a/emails/elnaz/auto-responder/webex-event.htm
+++ b/emails/elnaz/auto-responder/webex-event.htm
@@ -49,16 +49,16 @@
   <tr>
     <td class="center" align="center" valign="top">
       <center>
+
         <table class="container">
           <tr>
             <td>
+              <!--[if gte mso 9]>
               <table class="row pt-30 pb-30 row-blue hide-for-small">
-                <!--[if gte mso 9]>
                 <tr>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                 </tr>
-                <![endif]-->
                 <tr>
                   <td class="wrapper">
                     <table class="six columns">
@@ -76,9 +76,9 @@
                       <tr>
                         <td class="twelve sub-columns text-white text-pad">
                           <h1 class="text-white">Save the date</h1>
-                          <!--[if gte mso 9]>
+
                           <img src="http://software.dell.com/images/email/blank.gif" height="10">
-                          <![endif]-->
+
                           <div class="hide-for-small">
                             <table class="button button-green button-width-auto mt-10 mb-0">
                               <tr>
@@ -94,61 +94,120 @@
                     </table>
                   </td>
                 </tr>
-                <!--[if gte mso 9]>
                 <tr>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                   <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
                 </tr>
-                <![endif]-->
+              </table>
+              <![endif]-->
+              <!-- Hides for Microsoft Outlook-->
+              <!--[if !mso]><!-->
+              <table class="row pt-20 row-blue">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="center">
+                          <center>
+                            <table>
+                              <tr>
+                                <td class="text-pad">
+                                  <img class="mr-20"
+                                       src="http://stage.software.dell.com/images/email/icon-calendar.png">
+
+                                  <div class="text-white pull-right">
+                                    <h1 class="text-white">Save the date</h1>
+                                    <div class="hide-for-small">
+                                      <table class="button button-green button-width-auto mt-10 mb-0">
+                                        <tr>
+                                          <td>
+                                            <a href="#">Add to Your Calendar</a>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </div>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="text-pad">
+
+                                  <div class="show-for-small">
+                                    <table class="button button-green mt-10 mb-0" style="min-width:274px">
+                                      <tr class="row-blue">
+                                        <td>
+                                          <a href="#">Add to Your Calendar</a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </div>
+                                </td>
+                              </tr>
+                            </table>
+                          </center>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <!--<![endif]-->
+              <!--Agenda desktop 2-columns-->
+              <table class="row text-size-13 mt-20 hide-for-small">
+                <tr>
+                  <td class="wrapper last">
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          <strong>When</strong>
+                        </td>
+                        <td class="nine sub-columns last">
+                          Sept 22 2015, 1:00 AM, Pacific Daylight Time(North America)
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns"></td>
+                        <td class="nine sub-columns last">
+                          Sept 22 2015, 1:00 AM, Brasilia Time
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns"></td>
+                        <td class="nine sub-columns last">
+                          Sept 22 2015, 1:00 AM, Colombia Time
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns"></td>
+                        <td class="nine sub-columns last">
+                          ept 22 2015, 1:00 AM, Gulf Standard Time
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td class="three sub-columns text-pad">
+                          <strong>Where</strong>
+                        </td>
+                        <td class="nine sub-columns last">
+                          <a href="http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm">
+                            http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm
+                          </a>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
               </table>
               <!-- Hides for Microsoft Outlook-->
               <!--[if !mso]><!-->
               <!-- Only visible for mobile -->
               <div class="show-for-small">
-                <!--calendar-->
-                <table class="row pt-10 pb-10 row-blue">
-                  <tr>
-                    <td class="wrapper last">
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="center">
-                            <center>
-                              <table>
-                                <tr>
-                                  <td class="text-pad">
-                                    <img class="mr-20"
-                                         src="http://stage.software.dell.com/images/email/icon-calendar.png">
-
-                                    <div class="text-white pull-right">
-                                      <h1 class="text-white">Save the date</h1>
-                                    </div>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="text-pad">
-                                    <table class="medium button button-green button-width-auto mb-0">
-                                      <tbody>
-                                      <tr>
-                                        <td style="width:auto !important;">
-                                          <center>
-                                            <a href="#">Add to Your Calendar</a>
-                                          </center>
-                                        </td>
-                                      </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                            </center>
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-                <!--Agenda mobile-->
+                <!--Agenda-->
                 <table class="row pt-10">
                   <tr>
                     <td class="wrapper last">
@@ -245,56 +304,6 @@
                 </table>
               </div>
               <!--<![endif]-->
-              <!--Agenda desktop 2-columns-->
-              <table class="row text-size-13 mt-20 hide-for-small">
-                <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          <strong>When</strong>
-                        </td>
-                        <td class="nine sub-columns last">
-                          Sept 22 2015, 1:00 AM, Pacific Daylight Time(North America)
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns"></td>
-                        <td class="nine sub-columns last">
-                          Sept 22 2015, 1:00 AM, Brasilia Time
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns"></td>
-                        <td class="nine sub-columns last">
-                          Sept 22 2015, 1:00 AM, Colombia Time
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns"></td>
-                        <td class="nine sub-columns last">
-                          ept 22 2015, 1:00 AM, Gulf Standard Time
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="three sub-columns text-pad">
-                          <strong>Where</strong>
-                        </td>
-                        <td class="nine sub-columns last">
-                          <a href="http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm">
-                            http://email-elnaz.codingbyhand.com/emails/elnaz/auto-responder/webex-event.htm
-                          </a>
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
               <!--Agenda desktop 3-columns-->
               <table class="row text-size-13 hide-for-small">
                 <tr>
