--- a/emails/elnaz/auto-responder/calendar.htm
+++ b/emails/elnaz/auto-responder/calendar.htm
@@ -110,7 +110,7 @@
               <![endif]-->
               <!-- Hides for Microsoft Outlook-->
               <!--[if !mso]><!-->
-              <table class="row pt-10 pb-10 row-blue">
+              <table class="row pt-20 row-blue">
                 <tr>
                   <td class="wrapper last">
                     <table class="twelve columns">
@@ -144,8 +144,13 @@
                                       </table>
                                     </div>
                                   </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="text-pad">
+
                                   <div class="show-for-small">
-                                    <table class="button button-green mt-10 mb-0">
+                                    <table class="button button-green mt-10 mb-0" style="min-width:274px">
                                       <tr class="row-blue">
                                         <td>
                                           <a href="#">Add to Your Calendar</a>
@@ -159,28 +164,6 @@
                           </center>
                         </td>
                         <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="center">
-                          <center>
-                            <table class="row-blue">
-                              <tr>
-                                <td class="text-pad">
-                                  <div class="show-for-small" style="display:block !important; max-height: 100% !important;">
-                                    <table class="button button-green mt-10 mb-0">
-                                      <tr class="row-blue">
-                                        <td>
-                                          <a href="#">Add to Your Calendar</a>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </div>
-                                </td>
-                                <td class="expander"></td>
-                              </tr>
-                            </table>
-                          </center>
-                        </td>
                       </tr>
                     </table>
                   </td>
